-Added option to set constant color in grayscale mode - "--set-color".
-Added "--single-char" option.
-Fix: wrong image ratio in Windows Terminal.