@@ -9,6 +9,4 @@ packed/
 /test.bat
 /charset.txt
 
-/w2c
-
 *.dll
